fix the chat close button on mobile fix the slider on mobile

--- a/src/components/common/ContactCaroussel/style.scss
+++ b/src/components/common/ContactCaroussel/style.scss
@@ -16,7 +16,6 @@
   display: flex;
   margin: 0px 5px 15px;
   overflow-x: auto;
-  justify-content: center;
   width: 100%;
   overflow-y: hidden;
   .single-item-container {
